# BIS-club-

./: LICENSE  README.md
backend/: .env  Cargo.toml
backend/migrations/: 0240101000001_create_images_table.sql  20240101000002_create_team_members_table.sql  20240101000003_create_events_table.sql  20240101000004_create_gallery_table.sql
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/error/: mod.rs
backend/src/handlers/: event_handler.rs  gallery_handler.rs  health_handler.rs  image_handler.rs  mod.rs  team_handler.rs
backend/src/middleware/: mod.rs
backend/src/models/: event.rs  gallery.rs  image.rs  mod.rs  team.rs
backend/src/utils/: mod.rs
frontend/js/: animation.js  app.js
frontend/public/: index.html
frontend/public/css/: alldeviceshoots.css  animation.css  mobilenav.css  styles.css
frontend/public/pages/: member_home_page.html
