[package]
name = "bis-club-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-multipart = "0.6"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "migrate",
    "chrono"
] }
diesel = { version = "2.1", features = ["postgres"] }
diesel_migrations = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment & Config
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"

# Utilities
futures-util = "0.3"
mime = "0.3"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = "0.7"
bytes = "1.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
reqwest = "0.11"

[[bin]]
name = "bis-club-backend"
path = "src/main.rs"
